--- a/graph-nodejs-static/index.html
+++ b/graph-nodejs-static/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css" rel="stylesheet" crossorigin>
         <link href="https://unpkg.com/font-awesome@4.7/css/font-awesome.css" rel="stylesheet" crossorigin>
+        <script src='/.env.js'></script>
         <script src="https://unpkg.com/@azure/msal-browser@2/lib/msal-browser.min.js" crossorigin></script>
         <script src="https://unpkg.com/@microsoft/microsoft-graph-client@3.0.0/lib/graph-js-sdk.js" crossorigin></script>
         <script src="https://unpkg.com/@microsoft/microsoft-graph-client@3.0.0/lib/graph-client-msalBrowserAuthProvider.js" crossorigin></script>
@@ -21,9 +22,13 @@
             </div>
         </nav>
         <main class="container d-grid gap-2">
-            <button type="button" class="btn btn-primary btn-lg" onclick="run()">
+            <button type="button" class="btn btn-primary btn-lg" onclick="getProfile()">
                 <i class="fa fa-fw fa-inverse fa-play"></i>
-                Run Code
+                Get Profile
+            </button>
+            <button type="button" class="btn btn-primary btn-lg" onclick="getUsers()">
+                <i class="fa fa-fw fa-inverse fa-play"></i>
+                Get Users
             </button>
         </main>
         <script type="text/javascript" src="index.js"></script>
